Fix spacing of pager to match right side

--- a/src/assets/scss/_slim-default-theme.scss
+++ b/src/assets/scss/_slim-default-theme.scss
@@ -567,6 +567,7 @@
   border: none;
   background: none;
   height: $slimgrid-pager-height;
+  margin-left: 10px;
 
   .slick-pager-nav {
     display: none;
